# nix-config

./: .gitignore  .gitlint  README.md  flake.nix  justfile  lefthook.toml  master-key.age
home-manager/: audio.nix  common-cli.nix  common-gui.nix  common.nix  core.nix  default.nix  direnv.nix  docker.nix  doo-laptop.nix  editors.nix  file-sync.nix  font.nix  fuzzy-find.nix  gaming.nix  git.nix  gnome.nix  home-desktop.nix  home-manager.nix  icon.nix  lister.nix  nix-index.nix  nix.nix  pager.nix  preview.nix  productivity.nix  python.nix  secrets.nix  shell.nix  ssh.nix  terminal.nix  unfree.nix  vscode.nix  web-browser.nix
home-manager/doo-laptop/: default.nix
home-manager/home-desktop/: default.nix
home-manager/modules/: archive.nix  chat-personal.nix  chat-professional.nix  chat.nix  core.nix  default.nix  direnv.nix  disk.nix  docker.nix  download.nix  editors.nix  file-sync.nix  font.nix  fuzzy-find.nix  gaming.nix  git.nix  gnome.nix  http.nix  icon.nix  ip.nix  lister.nix  monitoring.nix  music.nix  nix-index.nix  nix.nix  pager.nix  productivity.nix  python.nix  shell.nix  ssh.nix  terminal.nix  theme.nix  tools.nix  torrent.nix  unfree.nix  user.nix  vscode.nix  web-browser.nix
home-manager/vscode-extensions/: code.nix  marketplace-list.nix  marketplace.nix  python.nix  theme.nix
home-manager/zellij/: config.kdl
home-manager/zellij-layouts/: lazygit.kdl
hosts/doo-laptop/: binfmt.nix  bootloader.nix  default.nix  docker-registry.nix  expo.nix  fundamentum-hosts.nix  hardware.nix  home-manager.nix  nvidia.nix  secrets.nix  tactical-rmm.nix
hosts/home-desktop/: bootloader.nix  default.nix  disko.nix  hardware.nix  home-manager.nix  secrets.nix  stylix.nix
lib/: default.nix  find.nix
modules/: default.nix
modules/automation/: home-assistant.nix
modules/desktop/: audio.nix  chat.nix  gnome.nix  icon.nix  productivity.nix  remote.nix  web-browser.nix
modules/disk/: disko.nix
modules/flake/: dendritic.nix  devshell.nix  formatter.nix  nixpkgs.nix  templates.nix
modules/gaming/: gaming.nix  steam.nix
modules/home/: home-manager.nix  propagate.nix
modules/locale/: localisation.nix
modules/network/: network.nix
modules/nix/: direnv.nix  flake-commands.nix  garbage-collect.nix  nix-index.nix  (+2 more)
nixos/: agenix.nix  audio.nix  bluetooth.nix  configuration.nix  container.nix  desktop-environment.nix  determinate.nix  direnv.nix  doo-laptop.nix  gaming.nix  garbage-collect.nix  hardware-configuration.nix  home-desktop.nix  home-manager.nix  localisation.nix  stylix.nix  user.nix  virtualization.nix  vpn.nix
overlays/: blackbox.nix  default.nix  helix.nix  lazygit.nix  stylix-fixup.nix
templates/python-pdm/: .envrc  flake.nix  pyproject.toml
(+94 files in other folders)
